Fix alignment

--- a/client/Pages/PageCategory/PageCategory.module.css
+++ b/client/Pages/PageCategory/PageCategory.module.css
@@ -7,7 +7,7 @@
   composes: xb from 'sizes';
   composes: hero from 'fonts';
 
-  margin: 0;
+  margin: 0 auto;
   padding: var(--space-xl) 0;
 
   font-weight: 500;
